manifests/good/deploy-with-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: good-with-resources
  labels:
    app: good-with-resources
spec:
  replicas: 2
  selector:
    matchLabels:
      app: good-with-resources
  template:
    metadata:
      labels:
        app: good-with-resources
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: app
          image: 123456789012.dkr.ecr.ap-northeast-2.amazonaws.com/web/httpd:2.4.59
          ports:
            - containerPort: 80
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          resources:
            limits:
              cpu: 400m
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 256Mi
