manifests/good/pod-restricted.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-restricted
  labels:
    app: good-restricted
spec:
  securityContext:
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault
  containers:
    - name: app
      image: 123456789012.dkr.ecr.ap-northeast-2.amazonaws.com/platform/busybox:1.36
      command: ["sleep", "3600"]
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop:
            - ALL
      resources:
        limits:
          cpu: 75m
          memory: 128Mi
        requests:
          cpu: 25m
          memory: 64Mi
